# simple_task_manager

./: .coverage  .gitignore  Dockerfile  README.md  pyproject.toml  pyrightconfig.json  requirements.txt
src/: main.py  models.py
tests/: test_main.py
